# sentiment_analysis

./: .gitignore  LICENSE  distilBERT.ipynb  getting_df.ipynb  latest_reddit_data_nova_roberta_overall_sentiment.ipynb  nltk_vader.ipynb  pyproject.toml  reddit_data.ipynb  reddit_data_Virginia.ipynb  reddit_data_nova.ipynb  reddit_data_nova_new_collection_method.ipynb  roBERTa.ipynb  single_post_testing.ipynb  textblob.ipynb  theme_categorization.ipynb
brightdata_across_social_media_analysis/: get_brightdata.py
brightdata_across_social_media_analysis/across_social_media_ABSA_analysis/: quora_ABSA.ipynb
brightdata_across_social_media_analysis/across_social_media_overall_sentiment_analysis/: analyzing_facebook_sentiment.ipynb  analyzing_instagram_sentiment.ipynb  analyzing_quora_sentiment.ipynb  analyzing_reddit_sentiment.ipynb  analyzing_x_sentiment.ipynb
brightdata_across_social_media_analysis/across_social_media_overall_sentiment_analysis/using_ABSA_CURRENT_TECHNIQUE/: Untitled-1.ipynb  instagram_sentiments_backup.json  (+8 more)
data/: test.csv
reddit_across_subreddits_analysis/across_subreddits_ABSA_analysis/: reddit_roberta_ABSA copy.ipynb  reddit_roberta_ABSA.ipynb  subreddits_ABSA.ipynb
reddit_across_subreddits_analysis/across_subreddits_overall_sentiment_analysis/: across_subreddits_overall_datacenters_ABSA.ipynb  reddit_sentiments_backup.json
testing/: ABSA_testing.ipynb  llama_theme_classification.ipynb  nltk_vader.ipynb  reddit_data.ipynb  reddit_data_nova_new_collection_method.ipynb  roBERTa.ipynb  single_post_testing.ipynb  test_dataset.json  textblob.ipynb
(+7 files in other folders)
