[project]
name = "sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "datasets>=4.4.1",
    "duckdb>=1.4.2",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "ruff>=0.14.5",
    "textblob>=0.19.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
